# ton-agents-marketplace

./: .gitignore  LICENSE  README.md  README.ru.md
agents-examples/: README.md  README.ru.md
frontend/: .env.example  README.md  README.ru.md  context.md  index.html  package-lock.json  package.json  (+2 more)
sidecar/: .coveragerc  .env.example  .env.full-example  README.md  README.ru.md  api.py  cli.py  context.md  heartbeat.py  jetton.py  jobs.py  pyproject.toml  refactor.py  refactor_split.py  requirements.txt  settings.py  stock.py  storage.py  transfer.py  update_readmes.py  verify.py
sidecar/api/: __init__.py  app.py  constants.py  describe.py  lifecycle.py  validation.py
sidecar/api/domain/: invocation.py  pricing.py  quoting.py  refund.py  refund_worker.py  result_processing.py
sidecar/api/http/: middleware.py  multipart.py  responses.py  routes.py
sidecar/api/http/handlers/: _invoke_helpers.py  image.py  info.py  invoke.py  quote.py  result.py
sidecar/api/infra/: cleanup.py  files.py  rate_limit.py
sidecar/cli/: __init__.py  args.py  discovery.py  main.py  server.py  shell.py  systemd.py  template.py  wallet.py
sidecar/cli/commands/: doctor.py  init_cmd.py  scaffold.py  service.py  stock.py
sidecar/payments/: __init__.py  jetton_monitor.py  jetton_verifier.py  nonce.py  processed_tx.py  refund_queue.py  ton_monitor.py  ton_verifier.py  types.py
sidecar/tests/: conftest.py  test_api.py  test_cli.py  test_heartbeat.py  test_jetton.py  test_jobs.py  test_known_bugs.py  test_settings.py  test_stock.py  test_storage.py  test_transfer.py  test_verify.py
(+126 files in other folders)
